--- a/API_Backend/package.json
+++ b/API_Backend/package.json
@@ -22,12 +22,8 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
-    "nodemon": "^2.0.14",
-    "passport": "^0.5.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "nodemon": "^2.0.14"
   }
 }
