Login and Register User with Auth

--- a/API_Backend/package.json
+++ b/API_Backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/advanced-computer-lab/Amazing-Engineers-Geniuses#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
