--- a/React_Frontend/package.json
+++ b/React_Frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
