--- a/API_Backend/package.json
+++ b/API_Backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14"
   }
 }
