--- a/React_Frontend/package.json
+++ b/React_Frontend/package.json
@@ -8,7 +8,6 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@mui/styles": "^5.2.2",
-    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
@@ -17,6 +16,7 @@
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-time-picker": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
