--- a/React_Frontend/package.json
+++ b/React_Frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-bootstrap-icons": "^1.7.2",
     "react-bootstrap-time-picker": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
