--- a/React_Frontend/package.json
+++ b/React_Frontend/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-icons": "^1.7.2",
     "react-bootstrap-time-picker": "^2.0.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
